# claude-games

./: AUDIT.md  LICENSE  README.md  play.py  pyproject.toml
arcade_games/: __init__.py  cli.py  config.py  currency.py  game.py  main.py  menu.py  net.py  registry.py  render.py  terminal.py  theme.py
arcade_games/games/: blackjack.py  breakout.py  connect4.py  dino.py  flappy.py  frogger.py  g2048.py  minesweeper.py  pacman.py  pong.py  reversi.py  roulette.py  shooter.py  slots.py  snake.py  sokoban.py  tetris.py  wordplay.py
tests/: test_games.py
