[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-games"
dynamic = ["version"]
description = "Terminal mini games to play while you wait"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    { name = "keerti" },
]
keywords = ["games", "terminal", "cli", "snake", "tetris", "2048", "curses"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Arcade",
    "Topic :: Games/Entertainment :: Puzzle Games",
]

[project.urls]
Homepage = "https://github.com/kirti34n/claude-games"
Repository = "https://github.com/kirti34n/claude-games"

[project.scripts]
play = "play:main"

[tool.setuptools]
py-modules = ["play"]

[tool.setuptools.dynamic]
version = {attr = "play.__version__"}
