[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-games"
dynamic = ["version"]
description = "Terminal mini games to play while you wait"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "keerti" },
]
dependencies = [
    "windows-curses; platform_system == 'Windows'",
]
keywords = ["games", "terminal", "cli", "snake", "tetris", "2048", "curses", "shooter", "pong", "flappy", "minesweeper", "pacman", "connect4", "sokoban", "reversi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Arcade",
    "Topic :: Games/Entertainment :: Puzzle Games",
]

[project.urls]
Homepage = "https://github.com/kirti34n/claude-games"
Repository = "https://github.com/kirti34n/claude-games"

[project.scripts]
play = "play:main"

[tool.setuptools]
py-modules = ["play"]

[tool.setuptools.dynamic]
version = {attr = "play.__version__"}
