[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arcade-games"
dynamic = ["version"]
description = "A terminal arcade collection: 14 games to play while you wait"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "keerti" },
]
dependencies = [
    "windows-curses; platform_system == 'Windows'",
]
keywords = ["games", "arcade", "terminal", "cli", "snake", "tetris", "2048", "curses", "shooter", "pong", "flappy", "minesweeper", "pacman", "connect4", "sokoban", "reversi", "frogger", "multiplayer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Arcade",
    "Topic :: Games/Entertainment :: Puzzle Games",
]

[project.urls]
Homepage = "https://github.com/kirti34n/arcade-games"
Repository = "https://github.com/kirti34n/arcade-games"

[project.scripts]
arcade = "play:main"
play = "play:main"

[tool.setuptools]
py-modules = ["play"]
packages = ["arcade_games", "arcade_games.games"]

[tool.setuptools.dynamic]
version = {attr = "arcade_games._version.__version__"}
